--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,11 @@
     letter-spacing: 2px;
     color: white;
 }
-
 .fpage {
-    height: 100vh;
+    height: 92vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
 }
 
@@ -23,7 +22,9 @@
     height: 20%;
     width: 100%;
 }
-
+.first-cont {
+    height: 20%;
+}
 .logo {
     width: 140px;
     height: 140px;
@@ -149,7 +150,7 @@ img {
 }
 
 .mid {
-    height: 20%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -158,7 +159,7 @@ img {
 
 #vs {
     display: block;
-    margin-top: 100px;
+    margin-top: 150px;
 }
 
 .temp {
@@ -182,7 +183,9 @@ img {
     background-color: white;
     color: black;
 }
-
+#head {
+    margin-top: -150px;
+}
 .choice-items {
     height: 100px;
     width: 100px;
@@ -224,6 +227,9 @@ img {
     display: none;
 }
 @media screen and (max-width: 1080px) {
+    .first-cont {
+        height: 12%;
+    }
     .logo {
         width: 280px;
         height: 280px;
@@ -235,6 +241,7 @@ img {
 
     .resp {
         display: block;
+        margin-top: 200px;
     }
 
     #input {
@@ -322,6 +329,7 @@ img {
     }
 
     .mid {
+        height: 20%;
         justify-content: center;
     }
 
@@ -349,4 +357,5 @@ img {
         justify-content: start;
         height: 80%;
     }
+
 }
