--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
     letter-spacing: 2px;
     color: white;
 }
+
 .fpage {
     height: 100vh;
     display: flex;
@@ -22,9 +23,11 @@
     height: 20%;
     width: 100%;
 }
+
 .first-cont {
     height: 20%;
 }
+
 .logo {
     width: 140px;
     height: 140px;
@@ -70,7 +73,7 @@
 }
 
 .start-btn:hover {
-    background-color: rgb(27, 27, 27);
+    background-color: rgb(53, 53, 53);
     cursor: pointer;
 }
 
@@ -104,6 +107,7 @@
     font-size: 20px;
     margin: 20px 0px 20px 0px;
 }
+
 .choices {
     height: 30%;
     display: flex;
@@ -137,8 +141,22 @@ img {
 
 .result {
     display: block;
-    height: 100px;
-    width: 100px;
+    height: 120px;
+    width: 120px;
+    animation-name: pop;
+    animation-duration: 0.2s
+}
+
+@keyframes pop {
+    from {
+        height: 20px;
+        width: 20px;
+    }
+
+    to {
+        height: 120px;
+        width: 120px;
+    }
 }
 
 .blue {
@@ -154,12 +172,37 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: baseline;
+}
+
+#mid-item1 {
+    flex-grow: 0;
+}
+
+#mid-item2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 4;
 }
 
 #vs {
     display: block;
-    margin-top: 100px;
+    height: 60px;
+    width: 60px;
+    animation-name: oonw;
+    animation-duration: 0.2s;
+}
+
+@keyframes oonw {
+    from {
+        height: 420px;
+        width: 420px;
+    }
+
+    to {
+        height: 60px;
+        width: 60px;
+    }
 }
 
 .temp {
@@ -182,10 +225,13 @@ img {
     border-radius: 50px;
     background-color: white;
     color: black;
+    font-size: 20px;
 }
+
 #head {
     margin-top: -150px;
 }
+
 .choice-items {
     height: 100px;
     width: 100px;
@@ -194,9 +240,15 @@ img {
     border-radius: 36px;
     border: 1px solid green;
     padding: 15px;
+    transition: 0.1s;
 }
 
-.choice-items:hover, .play-again:hover {
+.choice-items:hover {
+    box-shadow: 0px 0px 26px rgb(0, 128, 0);
+}
+
+.choice-items:hover,
+.play-again:hover {
     cursor: pointer;
 }
 
@@ -211,7 +263,6 @@ img {
     color: black;
 }
 
-
 .resp {
     font-size: 60px;
     display: none;
@@ -223,38 +274,51 @@ img {
     flex-direction: column;
 }
 
+.decision {
+    display: none;
+    flex-grow: 4;
+}
+
 .media-round {
     display: none;
 }
+
 @media screen and (max-width: 1080px) {
+
     .cont1,
     .cont2 {
         height: 240px;
         width: 220px;
 
     }
+
     .user-name {
         width: 220px;
     }
+
     .rounds {
         width: fit-content;
     }
+
     .choice-items {
         border-radius: 26px;
         height: 80px;
         width: 80px;
     }
 }
+
 @media screen and (max-width: 660px) {
     .first-cont {
         height: 12%;
     }
+
     .logo {
         width: 80px;
         height: 80px;
     }
 
-    #head, #nround {
+    #head,
+    #nround {
         display: none;
     }
 
@@ -272,7 +336,8 @@ img {
         font-size: 14px;
     }
 
-    ::placeholder, .required {
+    ::placeholder,
+    .required {
         font-size: 18px;
     }
 
@@ -290,11 +355,26 @@ img {
 
     .result {
         height: 70px;
-        width:  70px;
+        width: 70px;
+        animation-name: mpop;
+        animation-duration: 0.2s;
+    }
+
+    @keyframes mpop {
+        from {
+            height: 10px;
+            width: 10px;
+        }
+
+        to {
+            height: 70px;
+            width: 70px;
+        }
+
     }
 
     .choose {
-        margin-top:20px;
+        margin-top: 20px;
         margin-bottom: 20px;
         font-size: 14px;
     }
@@ -372,6 +452,7 @@ img {
         margin: 8px;
         font-size: 14px;
     }
+
     .play-again {
         font-size: 12px;
         padding: 10px 15px 10px 15px;
@@ -380,10 +461,12 @@ img {
         background-color: white;
         color: black;
     }
+
     .decision {
         margin: 20px;
         font-size: 24px;
     }
+
     .sec-cont {
         justify-content: start;
         height: 80%;
